feat : authentatication, verify email with otp, change password with verify token and otp token
